--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#"><img src="images/logo.png" alt="logo og the site" class="img-responsive"></a>
+					<a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo og the site" class="img-responsive"></a>
 				</div>
 				<!--end of navbar header-->
 				<!--starting of nav collapse-->
@@ -111,7 +111,7 @@
 		<!--start of container-->
 		<div class="container">
 			<h1 class="text-center">About Ghu Ghu</h1>
-			<hr width="7%" class="center">
+			<hr class="center">
 			<p class="text-center">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -138,7 +138,7 @@
 	<div id="services" >
 		<div class="container">
 			<h3 class="text-center">meet our beautiful team</h3>
-			<hr width="7%" class="center">
+			<hr class="center">
 			<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
@@ -234,7 +234,7 @@
 	<footer>
 		<div class="container">
 			<h3 class="text-center">Interested in doing a project with us</h3>
-			<hr width="7%" class="center">
+			<hr class="center">
 			<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -255,9 +255,9 @@
 							<h4 class="modal-title">Please Put Your Insight Below</h4>
 						</div><!--End of modal-header -->
 						<div class="modal-body">
-							<form role="form">
+							<form >
 									<div class="form-group ">
-										<input type="name" class="form-control"  id="name" placeholder="Enter Your Name">
+										<input type="text" class="form-control"  id="name" placeholder="Enter Your Name">
 									</div>
 									<div class="form-group ">
 										<input type="email" class="form-control" id="email" placeholder="Enter Your Email">
