--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo og the site" class="img-responsive"></a>
+					<a class="navbar-brand" href="index.html"><img src="images/logo1.png" alt="logo og the site" class="img-responsive"></a>
 				</div>
 				<!--end of navbar header-->
 				<!--starting of nav collapse-->
@@ -120,6 +120,7 @@
 						<iframe class="center-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.7431712603748!2d91.86835841452441!3d24.906740649536125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3750552786781c8b%3A0x8ffdfcea65a62434!2sEastern+Plaza+Sylhet!5e0!3m2!1sen!2sbd!4v1450211805753" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 					</div>
 				</div>
+		</div>
 		<!--end of the container-->
 	</div>
 	<!--End of portfolio -->
@@ -134,10 +135,10 @@
 			<br>
 			<form>
 				<div class="form-group ">
-					<input type="text" class="form-control"  id="name" placeholder="Enter Your Name">
+					<input type="text" class="form-control"   placeholder="Enter Your Name">
 				</div>
 				<div class="form-group ">
-					<input type="email" class="form-control" id="email" placeholder="Enter Your Email">
+					<input type="email" class="form-control"  placeholder="Enter Your Email">
 				</div>
 				<div class="form-group">
 					<textarea class="form-control" id="message" placeholder="Write Your Message In Here"></textarea>
@@ -178,10 +179,10 @@
 						<div class="modal-body">
 							<form>
 									<div class="form-group ">
-										<input type="text" class="form-control"  id="name" placeholder="Enter Your Name">
+										<input type="text" class="form-control"   placeholder="Enter Your Name">
 									</div>
 									<div class="form-group ">
-										<input type="email" class="form-control" id="email" placeholder="Enter Your Email">
+										<input type="email" class="form-control"  placeholder="Enter Your Email">
 									</div>
 									<div class="form-group">
 										<textarea class="form-control" id="message" placeholder="Enter Your Project Requirements"></textarea>
@@ -224,4 +225,5 @@
 <script type="text/javascript" src="js/script.js"></script>
 <!--End of the javascript linking-->
 </body>
+
 </html>
