--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo og the site" class="img-responsive"></a>
+					<a class="navbar-brand" href="index.html"><img src="images/logo1.png" alt="logo og the site" class="img-responsive"></a>
 				</div>
 				<!--end of navbar header-->
 				<!--starting of nav collapse-->
